--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "author": "Ben Carle",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "4.9.9",
+    "@material-ui/icons": "4.9.1",
     "cross-fetch": "3.0.4",
     "object-assign": "4.1.1",
     "react": "16.8.6",
@@ -36,8 +38,7 @@
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
     "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
-    "styled-components": "3.3.3"
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.4",
@@ -82,7 +83,7 @@
     "prompt": "1.0.0",
     "prop-types": "15.5.10",
     "raf": "3.3.2",
-    "react-hot-loader": "4.0.1",
+    "react-hot-loader": "4.12.20",
     "react-test-renderer": "16.8.6",
     "redux-immutable-state-invariant": "2.0.0",
     "redux-mock-store": "1.3.0",
