--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
+# production
+/build
 build/Release
 
 # Dependency directory
