--- a/package.json
+++ b/package.json
@@ -1,188 +1,53 @@
 {
   "name": "toy-blocks-client-react",
   "version": "0.1.0",
-  "description": "Toy blocks client",
-  "engines": {
-    "npm": ">=3"
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "4.11.4",
+    "@material-ui/icons": "4.11.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "cross-fetch": "^3.1.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
+    "redux": "4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "2.3.0",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "preinstall": "node tools/nodeVersionCheck.js",
-    "start-message": "babel-node tools/startMessage.js",
-    "prestart": "npm run start-message",
-    "start": "concurrently -k -r -s first \"npm run test:watch\" \"npm run open:src\" \"npm run lint:watch\"",
-    "open:src": "babel-node tools/srcServer.js",
-    "open:dist": "babel-node tools/distServer.js",
-    "lint": "esw webpack.config.* src tools --color",
-    "lint:watch": "npm run lint -- --watch",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "rimraf ./dist",
-    "prebuild": "npm run lint && npm run test && npm run clean-dist",
-    "build": "babel-node tools/build.js && npm run open:dist",
-    "test": "jest",
-    "test:CI": "babel-node tools/testCi.js",
-    "test:cover": "npm run test -- --coverage ",
-    "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
-    "test:watch": "jest --watch",
-    "open:cover": "npm run test:cover && opn ./coverage/lcov-report/index.html",
-    "analyze-bundle": "babel-node ./tools/analyzeBundle.js"
-  },
-  "author": "Ben Carle",
-  "license": "MIT",
-  "dependencies": {
-    "@material-ui/core": "4.9.9",
-    "@material-ui/icons": "4.9.1",
-    "cross-fetch": "3.0.4",
-    "object-assign": "4.1.1",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-redux": "7.1.0",
-    "react-router-dom": "5.0.1",
-    "redux": "4.0.1",
-    "redux-thunk": "2.3.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "7.1.4",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.1",
-    "babel-plugin-styled-components": "1.10.2",
-    "babel-plugin-transform-react-constant-elements": "6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.6",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
-    "browser-sync": "2.26.12",
-    "chalk": "2.0.1",
-    "concurrently": "3.5.0",
-    "connect-history-api-fallback": "1.3.0",
-    "coveralls": "2.13.1",
-    "css-loader": "0.28.7",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0",
-    "eslint": "4.2.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-react": "7.3.0",
-    "eslint-watch": "3.1.2",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "file-loader": "1.1.11",
-    "hard-source-webpack-plugin": "0.7.4",
-    "history": "4.6.0",
-    "html-webpack-plugin": "3.2.0",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "20.0.4",
-    "jest-cli": "20.0.4",
-    "jest-styled-components": "5.0.1",
-    "json-loader": "0.5.4",
-    "mockdate": "2.0.1",
-    "node": "8.9.4",
-    "opn-cli": "3.1.0",
-    "postcss-loader": "2.0.6",
-    "prompt": "1.0.0",
-    "prop-types": "15.5.10",
-    "raf": "3.3.2",
-    "react-hot-loader": "4.12.20",
-    "react-test-renderer": "16.8.6",
-    "redux-immutable-state-invariant": "2.0.0",
-    "redux-mock-store": "1.3.0",
-    "replace": "0.3.0",
-    "rimraf": "2.6.1",
-    "style-loader": "0.21.0",
-    "url-loader": "1.0.1",
-    "webpack": "4.44.1",
-    "webpack-bundle-analyzer": "2.11.1",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-hot-middleware": "2.22.1",
-    "webpack-md5-hash": "0.0.6"
-  },
-  "keywords": [],
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/assetsTransformer.js",
-      "\\.(css)$": "<rootDir>/tools/assetsTransformer.js"
-    },
-    "setupFiles": [
-      "raf/polyfill",
-      "./tools/enzymeTestAdapterSetup.js"
-    ]
-  },
-  "babel": {
-    "plugins": [
-      "babel-plugin-styled-components"
-    ],
-    "env": {
-      "development": {
-        "presets": [
-          "env",
-          "react",
-          "stage-1"
-        ]
-      },
-      "production": {
-        "presets": [
-          [
-            "env",
-            {
-              "es2015": {
-                "modules": false
-              },
-              "targets": {
-                "ie": 9,
-                "uglify": true
-              }
-            }
-          ],
-          "react",
-          "stage-1"
-        ],
-        "plugins": [
-          "react-hot-loader/babel",
-          "transform-react-constant-elements",
-          "transform-react-remove-prop-types"
-        ]
-      },
-      "test": {
-        "presets": [
-          "env",
-          "react",
-          "stage-1"
-        ]
-      }
-    }
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "test:cover": "npm run test -- --coverage",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "root": true,
     "extends": [
-      "eslint:recommended",
-      "plugin:import/errors",
-      "plugin:import/warnings",
-      "plugin:react/recommended"
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
-    "plugins": [
-      "react"
-    ],
-    "parser": "babel-eslint",
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true,
-        "experimentalObjectRestSpread": true
-      }
-    },
-    "env": {
-      "es6": true,
-      "browser": true,
-      "node": true,
-      "jquery": true,
-      "jest": true
-    },
-    "globals": {}
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "enzyme": "^3.11.0"
   }
 }
