--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.11.4",
-    "@material-ui/icons": "4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@emotion/react": "11.6.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "5.1.1",
+    "@mui/material": "5.1.1",
+    "@reduxjs/toolkit": "1.6.2",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "cross-fetch": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -47,7 +50,16 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "3.10.10",
+    "@types/jest": "27.0.2",
+    "@types/node": "16.11.7",
+    "@types/react": "17.0.34",
+    "@types/react-dom": "17.0.11",
+    "@types/react-router-dom": "5.3.2",
+    "@types/react-test-renderer": "17.0.1",
+    "@types/redux-mock-store": "1.0.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "typescript": "4.4.4"
   }
 }
